Migrate to typescript

--- a/package.json
+++ b/package.json
@@ -2,23 +2,17 @@
   "name": "interactive-iran-map",
   "version": "0.1.4",
   "private": false,
-  "license": "(ISC OR GPL-3.0)",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/alithecodeguy/interactive-iran-map.git"
   },
   "main": "dist/index.js",
-  "module": "dist/index.js",
-  "babel": {
-    "presets": [
-      "@babel/react"
-    ]
-  },
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -26,11 +20,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish:npm": "export NODE_ENV=production && rm -rf dist && mkdir dist && npx babel src/InteractiveIranMap --out-dir dist --copy-files",
-    "lint": "eslint . --ext .js"
+    "publish:npm": "export NODE_ENV=production && rm -rf dist && mkdir dist && tsc",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,12 +42,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "2.0.1",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.19.1"
+    "eslint-plugin-import": "^2.19.1",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.9",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/parser": "^2.18.0",
+    "ts-jest": "^22.4.1",
+    "typescript": "^3.7.5"
   }
 }
